Open up some Java 9 modules so that the example code will compile.